--- a/Maui/SimpleWeather.Maui/Platforms/iOS/Info.plist
+++ b/Maui/SimpleWeather.Maui/Platforms/iOS/Info.plist
@@ -38,5 +38,7 @@
 	<string>Optional. Allows access to current location to retrieve weather data.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Optional. Allows access to current location for weather notifications and widgets.</string>
+	<key>CFBundleName</key>
+	<string>SimpleWeather</string>
 </dict>
 </plist>
