--- a/SCRCHost/SCRCHost.csproj
+++ b/SCRCHost/SCRCHost.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="MSBuild.Sdk.Extras/3.0.23">
 
   <PropertyGroup>
@@ -36,7 +36,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DNNE" Version="1.0.33" />
+    <PackageReference Include="DNNE" Version="2.0.1" />
   </ItemGroup>
   
 </Project>
