SimpleWeather: enable build acceleration

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -15,4 +15,9 @@
   <PropertyGroup>
     <DefineConstants Condition="'$(_TargetPlatformIsWindows)' == 'True'">$(DefineConstants);WINDOWS</DefineConstants>
   </PropertyGroup>
+
+  <!-- Build acceleration -->
+  <PropertyGroup>
+    <AccelerateBuildsInVisualStudio>true</AccelerateBuildsInVisualStudio>
+  </PropertyGroup>
 </Project>
