--- a/Maui/SimpleWeather.Maui/Platforms/MacCatalyst/Info.plist
+++ b/Maui/SimpleWeather.Maui/Platforms/MacCatalyst/Info.plist
@@ -38,5 +38,11 @@
 	<string>Optional. Allows access to current location to retrieve weather data.</string>
 	<key>CFBundleName</key>
 	<string>SimpleWeather</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+		<string>fetch</string>
+		<string>processing</string>
+	</array>
 </dict>
 </plist>
